--- a/src/app/getapi/getapi.component.html
+++ b/src/app/getapi/getapi.component.html
@@ -2,18 +2,18 @@
     <table class="table" *ngIf="apiData">
         <thead>
             <th scope="'col">id</th>
-            <th scope="'col">title</th>
-            <th scope="'col">body</th>
+            <th scope="'col">name</th>
+            <th scope="'col">email</th>
         </thead>
         <tbody>
             <tr *ngFor="let item of apiData">
                 <td>{{item.id}}</td>
-                <td>{{item.title}}</td>
-                <td>{{item.body}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.email}}</td>
             </tr>
         </tbody>
     </table>
 </div>
 
 
-<button (click)="clickMe()">Submit</button>
+<!-- <button (click)="clickMe()">Submit</button> -->
